--- a/src/clizer/Properties/launchSettings.json
+++ b/src/clizer/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "clizer": {
-      "commandName": "Project",
-      "commandLineArgs": "slack -s 300*300 -l 0,0 --save"
+      "commandName": "Project"
     }
   }
 }
